# docs/swagger.json
@@ -142,7 +142,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/internal_transaction.CreateTransaction"
+                            "$ref": "#/definitions/internal_transaction.TransactionRequest"
                         }
                     }
                 ],
@@ -191,6 +191,52 @@
                     },
                     "404": {
                         "description": "Not Found",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            },
+            "put": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Transactions"
+                ],
+                "summary": "Atualizar transação",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Transaction ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Transaction data",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/internal_transaction.TransactionRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
                         "schema": {
                             "type": "object",
                             "additionalProperties": {
@@ -381,7 +427,18 @@
         }
     },
     "definitions": {
-        "internal_transaction.CreateTransaction": {
+        "internal_transaction.Frequency": {
+            "type": "string",
+            "enum": [
+                "fixed",
+                "variable"
+            ],
+            "x-enum-varnames": [
+                "Fixed",
+                "Variable"
+            ]
+        },
+        "internal_transaction.TransactionRequest": {
             "type": "object",
             "required": [
                 "amount",
@@ -406,17 +463,6 @@
                 }
             }
         },
-        "internal_transaction.Frequency": {
-            "type": "string",
-            "enum": [
-                "fixed",
-                "variable"
-            ],
-            "x-enum-varnames": [
-                "Fixed",
-                "Variable"
-            ]
-        },
         "internal_transaction.TransactionResponse": {
             "type": "object",
             "properties": {
@@ -440,6 +486,9 @@
                 },
                 "type": {
                     "$ref": "#/definitions/internal_transaction.Type"
+                },
+                "updated_at": {
+                    "type": "string"
                 }
             }
         },
