# internal/transaction/dto.go
@@ -1,6 +1,6 @@
 package transaction
 
-type CreateTransaction struct {
+type TransactionRequest struct {
 	Title     string    `json:"title" binding:"required"`
 	Amount    float64   `json:"amount" binding:"required"`
 	Type      Type      `json:"type" binding:"required"`
@@ -15,9 +15,6 @@ type TransactionResponse struct {
 	Type      Type      `json:"type"`
 	Category  Category  `json:"category"`
 	Frequency Frequency `json:"frequency"`
-	CreatedAt string    `json:"created_at"`
-}
-
-type UpdateTransaction struct {
-	Title string `json:"date"`
+	CreatedAt string    `json:"created_at,omitempty"`
+	UpdatedAt string    `json:"updated_at,omitempty"`
 }
